--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
   </head>
-  <body style="background-color:blue">
+  <body style="background-color:#F0F8FF">
   <p style="color:red;font-size:30px">This Is an Paragraph</p>
   <h1 style="margin-left:80px;font-size:1.2em">This is an H1 Heading</h1>
   <a href="https://www.google.com/">This is a Link for Google Search Engine</a>
